--- a/src/index.html
+++ b/src/index.html
@@ -25,15 +25,15 @@
         </header>
         <div class="form">
             <div class="input">
-                <label for="sides" class="form-label mt-5">Kérem adja meg a Hexadecagon oldalainak hosszát:</label>
-                <input type="text" id="sides" class="form-control">
+                <label for="sidesInput" class="form-label mt-5">Kérem adja meg a Hexadecagon oldalainak hosszát:</label>
+                <input type="text" id="sidesInput" class="form-control">
             </div>
             <div>
-                <button id="countButton" class="btn btn-primary mt-3">Számlálás</button>
+                <button id="calcButton" class="btn btn-primary mt-3">Számlálás</button>
             </div>
             <div class="input">
-                <label for="T" class="form-label mt-4">Hexadecagon Területe:</label>
-                <input type="text" id="T" class="form-control">
+                <label for="tOutput" class="form-label mt-4">Hexadecagon Területe:</label>
+                <input type="text" id="tOutput" class="form-control">
             </div>
         </div>
     </div>
